--- a/deployables/partner/conf/default.conf
+++ b/deployables/partner/conf/default.conf
@@ -17,30 +17,49 @@ password =
 database = ef11prod
 port = 3306
 
+[conf_path]
+path=/usr/local/opt/conf
+
 [log_env]
 env=dev
 	
 [loggers]
-keys=root
+keys=root,apps
 	
 [handlers]
-keys=file,screen
+keys=file,screen,file_apps
+
+; This section intentionally left blank. Please do not overwrite configuration to this in environment.confg aswell
 	
 [logger_root]
+level=NOTSET
+handlers=
+
+[logger_apps]
 level=DEBUG
-handlers=file
+qualname=apps
+handlers=file_apps
 	
 [formatters]
-keys = simple
+keys = simple,apps
 	
 [formatter_simple]
 format=%(asctime)s %(levelname)s [%(module)s.%(funcName)s - %(lineno)d] %(message)s
 datefmt='%Y-%m-%d %H:%M:%S'
+
+[formatter_apps]
+format=%(asctime)s %(levelname)s [%(module)s.%(funcName)s - %(lineno)d] %(id)s %(message)s
+datefmt='%Y-%m-%d %H:%M:%S'
 	
 [handler_file]
 class=handlers.RotatingFileHandler
-args=('/tmp/ecofactor-app.log','a','maxBytes=10000','backupCount=5')
+args=('/tmp/ecofactor-app1.log','a','maxBytes=10000','backupCount=5')
 formatter=simple
+
+[handler_file_apps]
+class=handlers.RotatingFileHandler
+args=('/tmp/ecofactor-app.log','a','maxBytes=10000','backupCount=5')
+formatter=apps
 	
 [handler_screen]
 class=StreamHandler
